# parallel-computing

./: CMakeLists.txt  Run.sh  reduction  reduction.cpp  reduction_omp  reduction_omp.cpp  sp_threads.eps  stats.txt  time_threads.eps
cuda/: CMakeLists.txt  Run.sh  reduction  reduction.cu  stats.txt
cuda/graphs/: cuda_mx150_sp.esp  cuda_mx150_time.esp  cuda_t4_sp.esp  cuda_t4_time.esp
mpi/: CMakeLists.txt  Run.sh  reduce  reduce.cc  stats.txt
